--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "discord.js": "^11.4.2",
     "fs": "0.0.1-security",
+    "quick.hook": "^1.5.1",
     "roblox-js": "^4.0.4",
     "superagent": "^4.1.0"
   }
