--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "currency-formatter": "^1.5.3",
     "discord.js": "^11.4.2",
+    "figlet": "^1.2.1",
     "fs": "0.0.1-security",
-    "quick.hook": "^1.5.1",
-    "roblox-js": "^4.0.4",
-    "superagent": "^4.1.0"
+    "hastebin-gen": "^1.3.1",
+    "moment": "^2.23.0",
+    "ms": "^2.1.1",
+    "parse-ms": "^2.0.0",
+    "profanities": "^2.9.0",
+    "simple-youtube-api": "^5.1.1",
+    "superagent": "^4.1.0",
+    "weather-js": "^2.0.0",
+    "ytdl-core": "^0.29.0"
   }
 }
