--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "NTI5Mzk0MDg3NjQwNTYzNzMy.D3WCpA.m2KFyUQ3M5gD9t-1E3_5KAPYYe4",
+    "token": "NTI5MTY4Mjg4MDg1NzA0NzE0.D3gheA.tIAg_XPCXiBMjc55vB4csCF3x2Y",
 
-    "prefix": "k!"
+    "prefix": "c!"
 }
